Improve mustache template with noopengames tag

--- a/templates/viewpage.mustache
+++ b/templates/viewpage.mustache
@@ -24,6 +24,11 @@
     
     }}
 <h2>{{heading}}</h2>
+
+{{^games}}
+    {{noopengames}}
+{{/games}}
+
 <table class="generaltable">
     <thead>
     <tr>
