Add quizname to view templates

--- a/templates/viewpagestudents.mustache
+++ b/templates/viewpagestudents.mustache
@@ -24,7 +24,7 @@
 
     }}
 
-<h2>{{#str}} univiemooduell, mod_mooduell {{/str}}</h2>
+<h2>{{quizname}}</h2>
 {{^opengames}}
 {{#str}} downloaduniviemoduell, mod_mooduell {{/str}}
 <br>
