--- a/templates/viewquestions.mustache
+++ b/templates/viewquestions.mustache
@@ -23,6 +23,9 @@
     * rows - array: An array of content rows for the table.
 
     }}
-<h2>{{#str}} listofquestions, mod_mooduell {{/str}}</h2>
+
+<h2>{{quizname}}</h2>
+
+<h3>{{#str}} listofquestions, mod_mooduell {{/str}}</h3>
 
 {{> mooduell/table_questions_teacher }}
