small fixes all around

--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -56,7 +56,9 @@
                 </a>
             </td>
             <td>
+            {{#imageurl}}
                 <a href="{{imageurl}}"><img src="{{imageurl}}" width="100px"></img></a>
+            {{/imageurl}}
             </td>
             <td>
                 {{{questiontext}}}
