speed up category names fetching

--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -75,7 +75,7 @@
             </td>
             <td>{{questiontype}}</td>
             <td>{{length}}</td>
-            <td>{{category}}</td>
+            <td>{{categoryname}}</td>
             <td>
                 <ul>
                     {{#warnings}}
