Download Highscores as CSV

--- a/templates/viewpage.mustache
+++ b/templates/viewpage.mustache
@@ -92,4 +92,5 @@
     <div class="tab-pane fade" id="highscores" role="tabpanel" aria-labelledby="highscores-tab">
         {{> mooduell/table_highscores_teacher }}
     </div>
+    <div><a class="btn btn-primary" href="view.php?id={{mooduellid}}&action=downloadhighscores">{{#str}} downloadhighscores, mod_mooduell {{/str}}</a></div>
 </div>
