Add imagetext (alt attribute) for Accessibility

--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -58,6 +58,7 @@
             <td>
             {{#imageurl}}
                 <a href="{{imageurl}}"><img src="{{imageurl}}" width="100px"></img></a>
+                <p>{{imagetext}}</p>
             {{/imageurl}}
             </td>
             <td>
