First steps to ajax tabs loading

--- a/templates/table_highscores_teacher.mustache
+++ b/templates/table_highscores_teacher.mustache
@@ -36,7 +36,7 @@
         <th class="text-right" scope="col">{{#str}} correctlyansweredpercentage, mod_mooduell {{/str}}</th>
     </tr>
     </thead>
-    <tbody>
+    <tbody id="highscorestable">
     {{#highscores}}
         <tr class="field">
             <td>{{username}}</td>
