--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -47,7 +47,7 @@
         <th scope="col">{{#str}} questionstatus, mod_mooduell {{/str}}</th>
     </tr>
     </thead>
-    <tbody>
+    <tbody id="questionstable">
     {{#questions}}
         <tr class="field">
             <td>
