--- a/templates/table_open_games_teacher.mustache
+++ b/templates/table_open_games_teacher.mustache
@@ -23,8 +23,12 @@
     * rows - array: An array of content rows for the table.
 
     }}
-
-<table class="generaltable fullwidth fieldslist">
+<div class="d-flex justify-content-center" id="ogspinner">
+    <div class="spinner-border" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
+<table class="generaltable fullwidth fieldslist" id="opengamestable">
     <thead>
     <tr>
         <th scope="col">{{#str}} playera, mod_mooduell {{/str}}</th>
