--- a/templates/table_statistics_teacher.mustache
+++ b/templates/table_statistics_teacher.mustache
@@ -37,9 +37,16 @@
         </div>
         <div class="card">
             <div class="card-body bg-dark text-white">
-                <h1 class="card-title" style="font-size: 80px;"> {{number_of_games_played}} </h1>
-                <p class="card-text" style="font-size: 30px;">{{#str}} stat_games_played, mod_mooduell {{/str}}</p>
-                <p class="card-text"><small>{{#str}} stat_games_played_desc, mod_mooduell {{/str}}</small></p>
+                <h1 class="card-title" style="font-size: 80px;"> {{number_of_games_started}} </h1>
+                <p class="card-text" style="font-size: 30px;">{{#str}} stat_games_started, mod_mooduell {{/str}}</p>
+                <p class="card-text"><small>{{#str}} stat_games_started_desc, mod_mooduell {{/str}}</small></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body bg-dark text-white">
+                <h1 class="card-title" style="font-size: 80px;"> {{number_of_games_finished}} </h1>
+                <p class="card-text" style="font-size: 30px;">{{#str}} stat_games_finished, mod_mooduell {{/str}}</p>
+                <p class="card-text"><small>{{#str}} stat_games_finished_desc, mod_mooduell {{/str}}</small></p>
             </div>
         </div>
         <div class="card">
