--- a/templates/viewpage.mustache
+++ b/templates/viewpage.mustache
@@ -101,6 +101,12 @@
     </div>
 </div>
 
+<div class="d-flex justify-content-center" id="spinner">
+    <div class="spinner-border hidden" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
+
 
 {{#js}}
     require(['mod_mooduell/init'], function($) {
