Card deck layout

--- a/templates/table_statistics_teacher.mustache
+++ b/templates/table_statistics_teacher.mustache
@@ -29,21 +29,21 @@
     <!-- Card Deck -->
     <div class="card-deck" style="margin-top: 25px; text-align: center;">
         <div class="card">
-            <div class="card-body bg-primary text-white">
+            <div class="card-body text-white" style="background-color: #263683;">
                 <h1 class="card-title" style="font-size: 80px;"> {{number_of_active_users}} </h1>
                 <p class="card-text" style="font-size: 30px;">{{#str}} stat_active_users, mod_mooduell {{/str}}</p>
                 <p class="card-text"><small>{{#str}} stat_active_users_desc, mod_mooduell {{/str}}</small></p>
             </div>
         </div>
         <div class="card">
-            <div class="card-body bg-dark text-white">
+            <div class="card-body text-white" style="background-color: #ed8701;">
                 <h1 class="card-title" style="font-size: 80px;"> {{number_of_games_started}} </h1>
                 <p class="card-text" style="font-size: 30px;">{{#str}} stat_games_started, mod_mooduell {{/str}}</p>
                 <p class="card-text"><small>{{#str}} stat_games_started_desc, mod_mooduell {{/str}}</small></p>
             </div>
         </div>
         <div class="card">
-            <div class="card-body bg-dark text-white">
+            <div class="card-body bg-primary text-white">
                 <h1 class="card-title" style="font-size: 80px;"> {{number_of_games_finished}} </h1>
                 <p class="card-text" style="font-size: 30px;">{{#str}} stat_games_finished, mod_mooduell {{/str}}</p>
                 <p class="card-text"><small>{{#str}} stat_games_finished_desc, mod_mooduell {{/str}}</small></p>
