--- a/templates/table_highscores_teacher.mustache
+++ b/templates/table_highscores_teacher.mustache
@@ -31,6 +31,7 @@
         <th class="text-right" scope="col">{{#str}} gamesplayed, mod_mooduell {{/str}}</th>
         <th class="text-right" scope="col">{{#str}} gameswon, mod_mooduell {{/str}}</th>
         <th class="text-right" scope="col">{{#str}} gameslost, mod_mooduell {{/str}}</th>
+        <th class="text-right" scope="col">{{#str}} rank, mod_mooduell {{/str}}</th>
         <th class="text-right" scope="col">{{#str}} score, mod_mooduell {{/str}}</th>
         <th class="text-right" scope="col">{{#str}} correctlyanswered, mod_mooduell {{/str}}</th>
         <th class="text-right" scope="col">{{#str}} correctlyansweredpercentage, mod_mooduell {{/str}}</th>
@@ -43,6 +44,7 @@
             <td class="text-right">{{gamesplayed}}</td>
             <td class="text-right">{{gameswon}}</td>
             <td class="text-right">{{gameslost}}</td>
+            <td class="text-right">{{rank}}</td>
             <td class="text-right">{{score}}</td>
             <td class="text-right">{{correct}}</td>
             <td class="text-right">{{correctpercentage}} %</td>
