--- a/templates/table_highscores.mustache
+++ b/templates/table_highscores.mustache
@@ -37,22 +37,23 @@
         <th class="text-right" scope="col">{{#str}} correctlyansweredpercentage, mod_mooduell {{/str}}</th>
     </tr>
     </thead>
-    <tbody>
-    {{#highscores}}
-        <tr class="field">
-            <td class="text-right">{{rank}}</td>
-            <td class="text-left" >{{username}}</td>
-            <td class="text-right">{{gamesplayed}}</td>
-            <td class="text-right">{{gameswon}}</td>
-            <td class="text-right">{{gameslost}}</td>
-            <td class="text-right">{{score}}</td>
-            <td class="text-right">{{correct}}</td>
-            <td class="text-right">{{correctpercentage}} %</td>
-        </tr>
-    {{/highscores}}
-    </tbody>
-</table>
 
-{{^highscores}}
-    {{#str}} noopengames, mod_mooduell {{/str}}
-{{/highscores}}
+    <!-- this table body will be dynamically filled by an AJAX function in init.js -->
+    <tbody id="highscorestable"/>
+
+    <!-- template without AJAX: -->
+    <!--<tbody>
+    {{! #highscores}}
+        <tr class="field">
+            <td class="text-right">{{! rank}}</td>
+            <td class="text-left" >{{! username}}</td>
+            <td class="text-right">{{! gamesplayed}}</td>
+            <td class="text-right">{{! gameswon}}</td>
+            <td class="text-right">{{! gameslost}}</td>
+            <td class="text-right">{{! score}}</td>
+            <td class="text-right">{{! correct}}</td>
+            <td class="text-right">{{! correctpercentage}} %</td>
+        </tr>
+    {{! /highscores}}
+    </tbody>-->
+</table>
