--- a/templates/viewpage.mustache
+++ b/templates/viewpage.mustache
@@ -97,7 +97,7 @@
         {{> mooduell/table_questions_teacher }}
     </div>
     <div class="tab-pane fade" id="highscores" role="tabpanel" aria-labelledby="highscores-tab">
-        {{> mooduell/table_highscores_teacher }}
+        {{> mooduell/table_highscores }}
     </div>
 </div>
 
@@ -110,6 +110,6 @@
 
 {{#js}}
     require(['mod_mooduell/init'], function($) {
-    $.init();
+    $.init('teacher');
     });
 {{/js}}
