--- a/templates/viewpagestudents.mustache
+++ b/templates/viewpagestudents.mustache
@@ -71,3 +71,16 @@
         {{> mooduell/table_highscores }}
     </div>
 </div>
+
+<div class="d-flex justify-content-center" id="spinner">
+    <div class="spinner-border hidden" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
+
+
+{{#js}}
+    require(['mod_mooduell/init'], function($) {
+    $.init('student');
+    });
+{{/js}}
