--- a/templates/table_finished_games_teacher.mustache
+++ b/templates/table_finished_games_teacher.mustache
@@ -34,22 +34,27 @@
         <th scope="col" class="text-right">{{#str}} action, mod_mooduell {{/str}}</th>
     </tr>
     </thead>
-    <tbody>
-    {{#finishedgames}}
+
+    <!-- this table body will be dynamically filled by an AJAX function in init.js -->
+    <tbody/>
+
+    <!-- template without AJAX (teacher's view with action links): -->
+    <!-- <tbody>
+    {{! #finishedgames}}
         <tr class="field">
-            <td>{{playera}}</td>
-            <td>{{playeraresults}}</td>
-            <td>{{playerb}}</td>
-            <td>{{playerbresults}}</td>
+            <td>{{! playera}}</td>
+            <td>{{! playeraresults}}</td>
+            <td>{{! playerb}}</td>
+            <td>{{! playerbresults}}</td>
             <td class="text-right">
-                {{! <a href="{{editfieldurl}" data-role="editfield">{{#pix}
+                {{! <a href="{{! editfieldurl}" data-role="editfield">{{#pix}
                     t/edit, core, {{#str} edit, moodle {{/str} {{/pix}</a> }}
-                <a href="view.php?action=viewquestions&id={{mooduellid}}&gameid={{gameid}}" data-id="{{id}}" data-role="deletefield">{{#pix}}
-                t/viewdetails, core, {{#str}} view, moodle {{/str}} {{/pix}}</a>
-                <a href="view.php?action=delete&id={{mooduellid}}&gameid={{gameid}}" data-id="{{id}}" data-role="deletefield">{{#pix}}
-                t/delete, core, {{#str}} delete, moodle {{/str}} {{/pix}}</a>
+                <a href="view.php?action=viewquestions&id={{! mooduellid}}&gameid={{! gameid}}" data-id="{{! id}}" data-role="deletefield">{{! #pix}}
+                t/viewdetails, core, {{! #str}} view, moodle {{! /str}} {{! /pix}}</a>
+                <a href="view.php?action=delete&id={{! mooduellid}}&gameid={{! gameid}}" data-id="{{! id}}" data-role="deletefield">{{! #pix}}
+                t/delete, core, {{! #str}} delete, moodle {{! /str}} {{! /pix}}</a>
             </td>
         </tr>
-    {{/finishedgames}}
-    </tbody>
+    {{! /finishedgames}}
+    </tbody> -->
 </table>
