--- a/templates/table_open_games_students.mustache
+++ b/templates/table_open_games_students.mustache
@@ -12,7 +12,7 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template mod_mooduell/viewpage
+    @template mod_mooduell/tablegamesteacher
     Template which defines a mooduell view page.
     Classes required for JS:
     * none
@@ -24,7 +24,7 @@
 
     }}
 
-<table class="generaltable fullwidth fieldslist">
+<table class="generaltable fullwidth fieldslist" id="opengamestable">
     <thead>
     <tr>
         <th scope="col">{{#str}} playera, mod_mooduell {{/str}}</th>
@@ -33,18 +33,19 @@
         <th scope="col">{{#str}} playerbresults, mod_mooduell {{/str}}</th>
     </tr>
     </thead>
-    <tbody>
-    {{#opengames}}
-        <tr class="field">
-            <td>{{playera}}</td>
-            <td>{{playeraresults}}</td>
-            <td>{{playerb}}</td>
-            <td>{{playerbresults}}</td>
-        </tr>
-    {{/opengames}}
-    </tbody>
-</table>
 
-{{^opengames}}
-    {{#str}} noopengames, mod_mooduell {{/str}}
-{{/opengames}}
+    <!-- this table body will be dynamically filled by an AJAX function in init.js -->
+    <tbody/>
+
+    <!-- template without AJAX (students view without action links): -->
+    <!-- <tbody>
+    {{! #opengames}}
+        <tr class="field">
+            <td>{{! playera}}</td>
+            <td>{{! playeraresults}}</td>
+            <td>{{! playerb}}</td>
+            <td>{{! playerbresults}}</td>
+        </tr>
+    {{! /opengames}}
+    </tbody> -->
+</table>
