--- a/templates/table_finished_games_students.mustache
+++ b/templates/table_finished_games_students.mustache
@@ -24,7 +24,7 @@
 
     }}
 
-<table class="generaltable fullwidth fieldslist">
+<table class="generaltable fullwidth fieldslist" id="finishedgamestable">
     <thead>
     <tr>
         <th scope="col">{{#str}} playera, mod_mooduell {{/str}}</th>
