--- a/templates/viewpagestudents.mustache
+++ b/templates/viewpagestudents.mustache
@@ -51,7 +51,11 @@
 
 <ul class="nav nav-tabs" id="mooduellTab" role="tablist">
     <li class="nav-item">
-        <a class="nav-link active" id="opengames-tab" data-toggle="tab" href="#opengames" role="tab" aria-controls="opengames" aria-selected="true"><h4>{{#str}} opengames, mod_mooduell {{/str}}</h4></a>
+        <a class="nav-link active" id="statistics-tab" data-toggle="tab" href="#statistics" role="tab" aria-controls="statistics" aria-selected="true"><h4>{{#str}}
+            statistics, mod_mooduell {{/str}}</h4></a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="opengames-tab" data-toggle="tab" href="#opengames" role="tab" aria-controls="opengames" aria-selected="true"><h4>{{#str}} opengames, mod_mooduell {{/str}}</h4></a>
     </li>
     <li class="nav-item">
         <a class="nav-link" id="finishedgames-tab" data-toggle="tab" href="#finishedgames" role="tab" aria-controls="finishedgames" aria-selected="false"><h4>{{#str}} finishedgames, mod_mooduell {{/str}}</h4></a>
@@ -61,7 +65,10 @@
     </li>
 </ul>
 <div class="tab-content" id="mooduellTabContent">
-    <div class="tab-pane fade show active" id="opengames" role="tabpanel" aria-labelledby="opengames-tab">
+    <div class="tab-pane fade show active" id="statistics" role="tabpanel" aria-labelledby="statistics-tab">
+        {{> mooduell/table_statistics_students }}
+    </div>
+    <div class="tab-pane fade" id="opengames" role="tabpanel" aria-labelledby="opengames-tab">
         {{> mooduell/table_open_games_students }}
     </div>
     <div class="tab-pane fade" id="finishedgames" role="tabpanel" aria-labelledby="finishedgames-tab">
